--- a/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
@@ -783,9 +783,12 @@
             if (checkData(formData)) {
               //formData[unqId] = grid.getDataLength() + 1;
               dataView.insertItem(grid.getDataLength(), formData);
-              insertFile(formData);
               
-              console.log(formData);
+              if(confirm("Do you want to register?") == true){
+	              insertFile(formData);
+	              location.reload(true);
+	              //console.log(formData);
+              }
             } else {
               alert("Please fill out all required fields.");
               return;
@@ -803,7 +806,11 @@
             if (isChanged) {
               formData[unqId] = originalData[unqId];
               dataView.updateItem(originalData[unqId], formData);
-              updateFile(formData);
+              if(confirm("Do you want to modify?") == true){
+              	updateFile(formData);
+              }
+              location.reload(true);
+              
             } else {
               alert("No changes detected.");
               return;
