--- a/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
@@ -407,6 +407,23 @@
       // 신규버튼 누르면 동작하는 함수
 
       function openDetails(modalType) {
+    	  
+    	let options1 = [
+    		{ value: "ORGIN", text: "ORGIN", column: "inscDvCd"},
+      		{ value: "CEDED", text: "CEDED", column: "inscDvCd"},
+      		{ value: "REINS", text: "REINS", column: "inscDvCd"}
+    	 ];
+    	
+    	let options2 = [
+    		{ value: "GMM", text: "GMM", column: "valuMetdCd"},
+      		{ value: "PAA", text: "PAA", column: "valuMetdCd"}
+    	];
+    	
+    	let options11 = [
+    		{ value: "Y", text: "Y", column: "useYn"},
+      		{ value: "N", text: "N", column: "useYn"}
+    	];
+    	
         grid.render();
 
         let originalData = null;
@@ -486,14 +503,55 @@
           const inputElem = document.createElement("input");
           inputElem.className = "form-control";
           inputElem.dataset.editorid = column.id;
-          inputElem.value =
-            modalType == "edit" ? dataContext[column.field] : ""; // pre-filling in the edit mode;
+          inputElem.value = modalType == "edit" ? dataContext[column.field] : ""; // pre-filling in the edit mode;
 
           formGroupElem.appendChild(detailLabelitem);
-          formGroupElem.appendChild(inputElem);
+          
+          
+          if(column.id === "inscDvCd" || column.id === "valuMetdCd" || column.id === "useYn"){
+        	
+        	  const selectInput = document.createElement('select');
+      		  selectInput.className = "form-select";
+      		  selectInput.dataset.editorid = column.id;
+      		
+      		  const defaultOption = document.createElement('option');
+			  defaultOption.value = "";
+			  defaultOption.textContent = "- options -";
+			  selectInput.appendChild(defaultOption);
+				
+			  
+			  let optionsData = [];
+			  
+			  if(column.id === "inscDvCd"){
+				  optionsData = options1;
+			  } else if (column.id === "valuMetdCd") {
+				  optionsData = options2; 
+			  } else {
+				  optionsData = options11;   
+			  }
+			
+			  optionsData.forEach(option => {
+					const optionElem = document.createElement('option');
+					optionElem.value = option.value;
+					optionElem.textContent = option.text;
+					selectInput.appendChild(optionElem);
+				});
+	          
+	          if(modalType === "edit"){
+					selectInput.value = dataContext[column.field] || "";
+				}
+	         
+	          formGroupElem.appendChild(selectInput);
+              
+          } else {
+        	  const inputElem = document.createElement('input');
+ 			  inputElem.className = "form-control";
+ 			  inputElem.dataset.editorid = column.id;
+ 			  inputElem.value = (modalType === "edit" && dataContext) ? dataContext[column.field] : ""; // pre-filling in the edit mode;
+        	  formGroupElem.appendChild(inputElem);
+          }
 
           colElem.appendChild(formGroupElem);
-
           currentRow.appendChild(colElem);
         });
 
@@ -531,7 +589,11 @@
             if (checkData(formData)) {
               formData[unqId] = grid.getDataLength() + 1;
               dataView.insertItem(grid.getDataLength(), formData);
-              insertFile(formData);
+              
+              if(confirm("Do you want to register?") == true){
+              	insertFile(formData);
+              	location.reload(true);
+              }
             } else {
               alert("Please fill out all required fields.");
               return;
@@ -549,7 +611,10 @@
             if (isChanged) {
               formData[unqId] = originalData[unqId];
               dataView.updateItem(originalData[unqId], formData);
-              updateFile(formData);
+              if(confirm("Do you want to modify?") == true){
+                updateFile(formData);
+              }
+              location.reload(true);
             } else {
               alert("No changes detected.");
               return;
