--- a/src/main/resources/templates/views/wrk/bat/WRKBAT001M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT001M0.html
@@ -671,7 +671,11 @@
             if (checkData(formData)) {
               //formData[unqId] = grid.getDataLength() + 1;
               dataView.insertItem(grid.getDataLength(), formData);
-              insertFile(formData);
+              
+              if(confirm("Do you want to register?") == true){
+	              insertFile(formData);
+	              location.reload(true);
+              }
             } else {
               alert("Please fill out all required fields.");
               return;
@@ -689,7 +693,10 @@
             if (isChanged) {
               formData[unqId] = originalData[unqId];
               dataView.updateItem(originalData[unqId], formData);
+              if(confirm("Do you want to modify?") == true){
               updateFile(formData);
+              }
+              location.reload(true);
             } else {
               alert("No changes detected.");
               return;
