--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -524,8 +524,8 @@
       function openDetails(modalType) {
     	  
     	let options6 = [
-    		{ value: "Y", text: "Y", column: "fileDelYn"},
-    		{ value: "N", text: "N", column: "fileDelYn"}    		
+    		{ value: "Y", text: "Y", column: " "},
+    		{ value: "N", text: "N", column: " "}    		
     	];
     	
     	/* 동일한 형태의 콤보 키-값
@@ -699,10 +699,11 @@
         const saveBtn = document.querySelector(".modal-footer .btn-primary");
         saveBtn.removeEventListener("click", saveHandler);
         saveBtn.addEventListener("click", saveHandler);
+        
 
         // saveBtn.textContent = modalType === "create" ? "Create" : "Save changes";
         function saveHandler() {
-          
+          console.log("save테스트");
           const formData = {};
 
           // Collect form data
@@ -710,20 +711,28 @@
             const input = modalBodyElem.querySelector(
               `[data-editorid="${column.id}"]`
             );
+            
             if (input) {
               formData[column.field] = input.value.trim();
             }
+            
+            console.log("input테스트");
           });
 
-
           if (modalType === "create") {
+        	  console.log("create테스트");
 
             // Add new item to grid data
             if (checkData(formData)) {
             	console.log(formData);
               formData[unqId] = grid.getDataLength() + 1;
               dataView.insertItem(grid.getDataLength(), formData);
-              insertFile(formData);
+              
+              if(confirm("Do you want to register?") == true){
+            	  console.log("등록테스트");
+            	  insertFile(formData);
+            	  location.reload(true);
+              }
               //main();
               
             } else {
@@ -744,12 +753,18 @@
             if (isChanged) {
               formData[unqId] = originalData[unqId];
               dataView.updateItem(originalData[unqId], formData);
-              updateFile(formData);
+              
+              if(confirm("Do you want to modify?") == true){
+            	  updateFile(formData);
+              }
+              location.reload(true);
+              
             } else {
               alert("No changes detected.");
               return;
             }
           }
+
           grid.render();
           modalElement.hide(); // Hide the modal after saving\
         }
