--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -45,11 +45,10 @@ a.nav-link.active {
   height: 700px;
   width: 100%;
 }
-input::file-selector-button {
+/* input::file-selector-button {
   font-weight: 500;
   color: rgb(255, 255, 255);
   padding: 3px;
-  border: thin solid rgb(84, 85, 87);
   background-color: rgb(102, 115, 130);
   border-radius: 4px;
   transition: background-color 0.3s;
@@ -58,7 +57,7 @@ input::file-selector-button {
 
 input::file-selector-button:hover {
   background-color: rgb(90, 90, 90);
-}
+} */
 .item-details-label {
   margin-left: 10px;
   margin-top: 15px;
@@ -95,3 +94,91 @@ input::file-selector-button:hover {
   font-style: italic;
   margin-left: 12px;
 }
+
+/* this is the css for the suncription page */
+.row-cards {
+  margin-top: 5px;
+  /* this is used for the centering the 1st subscription page */
+  justify-content: center;
+}
+
+/* new styling for Smaller and Centered Cards */
+.subscription-card {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
+}
+
+.subscription-card:hover {
+  transform: translateY(-5px);
+}
+
+/* .subscription-card:hover {
+  transform: translateY(-5px);
+  transition: transform 0.3s;
+} */
+
+/* Styling for each subscription card */
+.subscription-card {
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.subscription-card .text-uppercase {
+  font-size: 0.8rem;
+}
+
+.subscription-card .display-5 {
+  font-size: 1.5rem;
+}
+
+.subscription-card .fw-bold {
+  font-weight: 700;
+}
+
+.subscription-card .icon {
+  width: 20px;
+  height: 20px;
+}
+
+.form-select {
+  width: 100%;
+  padding: 10px;
+  font-size: 1rem;
+}
+
+.list-unstyled li {
+  margin-bottom: 10px;
+  font-size: 1rem;
+}
+.flex-container {
+  display: flex;
+  align-items: flex-start;
+  padding: 4px;
+}
+
+@media (max-width: 992px) {
+  .subscription-card {
+    width: 300px;
+  }
+}
+
+@media (max-width: 576px) {
+  .subscription-card .display-5 {
+    width: 100%;
+    margin: 10px 0;
+  }
+  .subscription-card .text-uppercase {
+    font-size: 0.7rem;
+  }
+}
+
+/* .optionSelect {
+  padding: 3px;
+  text-align: left;
+  display: flex;
+  justify-content: flex-start;
+  font-size: 14px;
+} */
