--- a/src/main/resources/static/css/css-tabler/demo.css
+++ b/src/main/resources/static/css/css-tabler/demo.css
@@ -17,7 +17,11 @@ pre.highlight,
 }
 pre.highlight,
 .highlight pre {
-  scrollbar-color: rgba(var(--tblr-scrollbar-color, var(--tblr-body-color-rgb)), 0.16) transparent;
+  scrollbar-color: rgba(
+      var(--tblr-scrollbar-color, var(--tblr-body-color-rgb)),
+      0.16
+    )
+    transparent;
 }
 pre.highlight::-webkit-scrollbar,
 .highlight pre::-webkit-scrollbar {
@@ -37,7 +41,8 @@ pre.highlight::-webkit-scrollbar-thumb,
 .highlight pre::-webkit-scrollbar-thumb {
   border-radius: 1rem;
   border: 5px solid transparent;
-  box-shadow: inset 0 0 0 1rem rgba(var(--tblr-scrollbar-color, var(--tblr-body-color-rgb)), 0.16);
+  box-shadow: inset 0 0 0 1rem
+    rgba(var(--tblr-scrollbar-color, var(--tblr-body-color-rgb)), 0.16);
 }
 pre.highlight::-webkit-scrollbar-track,
 .highlight pre::-webkit-scrollbar-track {
@@ -45,7 +50,8 @@ pre.highlight::-webkit-scrollbar-track,
 }
 pre.highlight:hover::-webkit-scrollbar-thumb,
 .highlight pre:hover::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 0 1rem rgba(var(--tblr-scrollbar-color, var(--tblr-body-color-rgb)), 0.32);
+  box-shadow: inset 0 0 0 1rem
+    rgba(var(--tblr-scrollbar-color, var(--tblr-body-color-rgb)), 0.32);
 }
 pre.highlight::-webkit-scrollbar-corner,
 .highlight pre::-webkit-scrollbar-corner {
@@ -59,29 +65,37 @@ pre.highlight::-webkit-scrollbar-corner,
   margin: 0 !important;
   padding: 0 !important;
 }
-.highlight .c, .highlight .c1 {
+.highlight .c,
+.highlight .c1 {
   color: #a0aec0;
 }
-.highlight .nt, .highlight .nc, .highlight .nx {
+.highlight .nt,
+.highlight .nc,
+.highlight .nx {
   color: #ff8383;
 }
-.highlight .na, .highlight .p {
+.highlight .na,
+.highlight .p {
   color: #ffe484;
 }
-.highlight .s, .highlight .dl, .highlight .s2 {
+.highlight .s,
+.highlight .dl,
+.highlight .s2 {
   color: #b5f4a5;
 }
 .highlight .k {
   color: #93ddfd;
 }
-.highlight .s1, .highlight .mi {
+.highlight .s1,
+.highlight .mi {
   color: #d9a9ff;
 }
 
 .example {
   padding: 2rem;
   margin: 1rem 0 2rem;
-  border: var(--tblr-border-width) var(--tblr-border-style) var(--tblr-border-color);
+  border: var(--tblr-border-width) var(--tblr-border-style)
+    var(--tblr-border-color);
   border-radius: 3px 3px 0 0;
   position: relative;
   min-height: 12rem;
@@ -114,7 +128,8 @@ pre.highlight::-webkit-scrollbar-corner,
 
 .example-code {
   margin: 2rem 0;
-  border: var(--tblr-border-width) var(--tblr-border-style) var(--tblr-border-color);
+  border: var(--tblr-border-width) var(--tblr-border-style)
+    var(--tblr-border-color);
   border-top: none;
 }
 .example-code pre {
@@ -192,16 +207,16 @@ pre.highlight::-webkit-scrollbar-corner,
 .demo-icon-preview-icon pre {
   margin: 0;
   -webkit-user-select: all;
-     -moz-user-select: all;
-          user-select: all;
+  -moz-user-select: all;
+  user-select: all;
 }
 
 .demo-dividers > p {
   opacity: 0.2;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .demo-icons-list {
@@ -227,8 +242,10 @@ pre.highlight::-webkit-scrollbar-corner,
   aspect-ratio: 1;
   text-align: center;
   padding: 0.5rem;
-  border-right: var(--tblr-border-width) var(--tblr-border-style) var(--tblr-border-color);
-  border-bottom: var(--tblr-border-width) var(--tblr-border-style) var(--tblr-border-color);
+  border-right: var(--tblr-border-width) var(--tblr-border-style)
+    var(--tblr-border-color);
+  border-bottom: var(--tblr-border-width) var(--tblr-border-style)
+    var(--tblr-border-color);
   color: inherit;
   cursor: pointer;
 }
@@ -256,7 +273,8 @@ pre.highlight::-webkit-scrollbar-corner,
   height: 3rem;
   width: 3rem;
   position: relative;
-  border: var(--tblr-border-width) var(--tblr-border-style) var(--tblr-border-color);
+  border: var(--tblr-border-width) var(--tblr-border-style)
+    var(--tblr-border-color);
   box-shadow: rgba(var(--tblr-body-color-rgb), 0.04) 0 2px 4px 0;
 }
 .settings-scheme-light {
@@ -272,5 +290,9 @@ pre.highlight::-webkit-scrollbar-corner,
   background: #182433;
 }
 .settings-scheme-colored {
-  background-image: linear-gradient(135deg, var(--tblr-primary) 50%, #fcfdfe 50%);
+  background-image: linear-gradient(
+    135deg,
+    var(--tblr-primary) 50%,
+    #fcfdfe 50%
+  );
 }
