--- a/src/main/resources/static/css/file-css.css
+++ b/src/main/resources/static/css/file-css.css
@@ -1,15 +1,12 @@
 .form-box {
-  border: 1px solid #5b5b5b;
-  padding: 20px;
+  border: 1px solid #e3e2e2;
+  padding: 10px;
   border-radius: 5px;
   margin-top: 20px;
   align-items: center;
   width: 100%;
 }
-.button-position {
-  display: flex;
-  justify-content: space-between;
-}
+
 h2 {
   padding: 20px 0;
   text-align: left;
@@ -24,28 +21,13 @@ h2 {
   font-size: 0.8rem;
   color: #6c757d;
 }
-.ptag-container a {
-  color: #2660a4;
-  text-decoration: none;
-}
-.ptag-container a:hover {
-  text-decoration: underline;
-}
-.ptag-container span::after {
-  /* content: " >"; */
-  color: #6c757d;
-}
-
-.ptag-container span:last-child::after {
-  content: "";
-}
 
 .filter-bar {
   display: flex;
   justify-content: space-between;
   /* margin-bottom: 300px; */
 }
-.filter-bar input,
+/* .filter-bar input, */
 .filter-bar select {
   margin-right: 10px;
 }
@@ -53,33 +35,24 @@ h2 {
   /* padding-top: 20px; */
   display: flex;
   justify-content: space-between;
-  margin-bottom: 2px;
+  margin-bottom: 1px;
 }
 .form-label {
   /* font-family:sans-serif; */
   font-size: 13px;
   /* font-weight: bold; */
 }
-.form-control {
-  font-size: 13px;
-  padding: 3px;
-  /* padding-right: 80px; */
-  border-radius: 6.5px;
-  box-shadow: 0 1px 10px rgba(169, 169, 255, 0.5);
-  /* display: flex; */
-  margin-right: 10px;
-  /* margin-bottom: 4px; */
-}
 
-.form-input-temp {
+/* .form-input-temp {
   font-size: 13px;
   padding: 3.7px;
   border-radius: 7.5px;
   box-shadow: 0 0px 10px rgba(234, 234, 255, 0.5);
   margin-right: 10px;
   padding-inline-end: 30px;
-}
-.form-container .form-container input,
+} */
+.form-container 
+/* .form-container input, */
 .form-container select {
   font-size: 13px;
   padding: 3.1px;
@@ -90,38 +63,7 @@ h2 {
   margin-right: 10px;
   /* margin-bottom: 4px; */
 }
-.initialize-button,
-.form-buttons,
-.down-button,
-.reset-button {
-  border-radius: 8px;
-  font-size: 13px;
-  border: #6e6e6e;
-  outline: none;
-  background-color: #f19953;
-  color: #000000;
-  margin: 0 5px;
-  padding: 5px;
-  /* border-radius: 4px; */
-  cursor: pointer;
-  padding-inline: 10px;
-}
-.initialize-button {
-  background-color: #fac748;
-}
-.down-button {
-  background-color: #9fd8cb;
-}
-.reset-button {
-  margin: auto;
-  color: aliceblue;
-  background-color: #2660a4;
-}
-.clickable {
-  cursor: pointer;
-  color: rgb(110, 110, 255);
-  text-decoration: underline;
-}
+
 table {
   /* to make the table scrollable */
   overflow-y: scroll;
