--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -293,6 +293,7 @@
 								<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL002M0');"> File Input </a> 
 								<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL003M0');"> File Upload </a> 
 								<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL004M0');"> Load history </a>
+								<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/OPTIONDETAILS');"> Chart Sample Page </a>
 							</div>
 						</li>
 						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
