--- a/src/main/resources/templates/views/opn/usr/OPNUSR002M0.html
+++ b/src/main/resources/templates/views/opn/usr/OPNUSR002M0.html
@@ -93,6 +93,7 @@
 			}
 	
 			function getCsList(input) {
+				console.log("getCsList input : " + input);
 				var option = {
 							   id          : "SelectList"
 						     , type        : "post"
@@ -112,7 +113,7 @@
 					     , type        : "post"
 						 , url         : "/OPNUSR002M0UpdateList"
 						 , async       : false
-						 , dataType    : "json"
+						 , dataType    : "text"
 						 , contentType : "application/json; charset=utf-8"
 						 , data        : addedRow
 			             };
@@ -120,25 +121,23 @@
 				gf_Transaction(option, fn_callback );
 			}
 	
-			function updateCs(updatedRow) {
-				console.log("updateCs updatedRow : " + updatedRow);
+			function fn_updateCs(input) {
+				console.log("updateCs input : " + input);
 				var option = {
 						   id          : "updateList"
 					     , type        : "post"
 						 , url         : "/OPNUSR002M0UpdateList"
-						 , async       : false
-						 , dataType    : "json"
+						 , async       : true
+						 , dataType    : "text"
 						 , contentType : "application/json; charset=utf-8"
-						 , data        : updatedRow
+						 , data        : input
 			             };
 			
 				gf_Transaction(option, fn_callback );
 			}
-	/*
-			function deleteFile(todeleteRow) {
-			parentDeleteFile(todeleteRow, "/OPNUSR002M0DeleteList");
-			}
-	*/
+			
+		</script>
+		<script>
 			$(document).ready(function () {
 				console.log("Document is ready.");
 				//화면 접속시 바로 조회
@@ -172,6 +171,8 @@
 						right: "",
 						bottom: ""
 					});
+					const modalBodyElem = document.querySelector(".modal-body");
+				    modalBodyElem.innerHTML = ""; // 모달 내용 초기화
 				});
 					// // Optional Case:	we can trigger the modal for test pirpose
 					// // this should be romoved when the code is ready for production 
@@ -792,7 +793,7 @@
 						if (checkData(formData)) {
 							formData[unqId] = grid.getDataLength() + 1;
 							//dataView.insertItem(grid.getDataLength(), formData);
-							insertCs(formData);
+							insertCs(JSON.stringify(formData));
 						} else {
 							alert("Please fill out all required fields.");
 							return;
@@ -809,8 +810,9 @@
 	
 						if (isChanged) {
 							formData[unqId] = originalData[unqId];
+							console.log("fn_updateCs befor formData:", formData);
 							//dataView.updateItem(originalData[unqId], formData);
-							updateCs(formData);
+							fn_updateCs(JSON.stringify(formData));
 						} else {
 							alert("No changes detected.");
 							return;
